--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <div class="container">
       <div class="formulaScreen">0</div>
       <div class="output">0</div>
-      <button id="" class="big">AC</button><!--
-    --><button id="" class="sign">/</button><!--
-    --><button id="" class="sign">x</button><!--
-    --><button id="" class="">7</button><!--
-      --><button id="" class="">8</button><!--
-      --><button id="" class="">9</button><!--
-      --><button id="" class="sign">-</button><!--
-      --><button id="" class="">4</button><!--
-      --><button id="" class="">5</button><!--
-      --><button id="" class="">6</button><!--
-      --><button id="" class="sign">+</button><!--
-      --><button id="" class="">1</button><!--
-      --><button id="" class="">2</button><!--
-      --><button id="" class="">3</button><!--
-      --><button id="" class="zero">0</button><!--
-      --><button id="" class="">.</button><!--
-      --><button id="" class="equals">=</button>
+      <button id="clear" class="big" value="AC">AC</button><!--
+    --><button id="divide" class="sign" value="/">/</button><!--
+    --><button id="multiply" class="sign" value="x">x</button><!--
+    --><button id="seven" value="7">7</button><!--
+      --><button id="eight" value="8">8</button><!--
+      --><button id="nine" value="9">9</button><!--
+      --><button id="subtract" class="sign" value="-">-</button><!--
+      --><button id="four" value="4">4</button><!--
+      --><button id="five" value="5">5</button><!--
+      --><button id="six" value="6">6</button><!--
+      --><button id="add" class="sign" value="+">+</button><!--
+      --><button id="one" value="1">1</button><!--
+      --><button id="two" value="2">2</button><!--
+      --><button id="three" value="3">3</button><!--
+      --><button id="zero" class="zero" value="0">0</button><!--
+      --><button id="decimal" value=".">.</button><!--
+      --><button id="equals" class="equals" value="=">=</button>
     </div>
     <p>made by Mila</p>
   </div>
