calculation logic added

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <div class="wrapper">
     <div class="container">
-      <div class="formulaScreen">0</div>
-      <div class="output">0</div>
+      <div id="formula" class="formulaScreen">0</div>
+      <div id="output" class="output">0</div>
       <button id="clear" class="big" value="AC">AC</button><!--
-    --><button id="divide" class="sign" value="/">/</button><!--
-    --><button id="multiply" class="sign" value="x">x</button><!--
+    --><button id="divide" class="sign" value="/">&divide</button><!--
+    --><button id="multiply" class="sign" value="*">&times</button><!--
     --><button id="seven" value="7">7</button><!--
       --><button id="eight" value="8">8</button><!--
       --><button id="nine" value="9">9</button><!--
